src/objects/DRCTS__Directories__c.object
<CustomObject>
    <description>This is the primary object for enhanced directories.</description>
    <fields>
        <fullName>DRCTS__Additional_Fields__c</fullName>
        <description>Any additional fields to be displayed</description>
        <inlineHelpText>Any additional fields to be displayed</inlineHelpText>
        <label>Additional Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Badges_Filter__c</fullName>
        <description>Defines the badges that are allowed to view the directory.</description>
        <inlineHelpText>Defines the badges that are allowed to view the directory.</inlineHelpText>
        <label>Badges Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Banner_Image__c</fullName>
        <description>Defines the image path for the banner image to be displayed in the directory.</description>
        <inlineHelpText>Defines the image path for the banner image to be displayed in the directory.</inlineHelpText>
        <label>Banner Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Body_Background_Color__c</fullName>
        <description>The color for the overall background.</description>
        <inlineHelpText>The color for the overall background.</inlineHelpText>
        <label>Body Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Column_Headers__c</fullName>
        <description>This field contains field names (CSV) to be displayed as column headers for the table view.</description>
        <inlineHelpText>This field contains field names (CSV) to be displayed as column headers for the table view.</inlineHelpText>
        <label>Column Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Component_Header__c</fullName>
        <description>Name is displayed as header of the related list.</description>
        <inlineHelpText>Name is displayed as header of the related list.</inlineHelpText>
        <label>Component Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Component_Name__c</fullName>
        <description>** REQUIRED ** API name of a Lightning component.</description>
        <inlineHelpText>** REQUIRED ** API name of a Lightning component.</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Contact_Me_Button_Label__c</fullName>
        <defaultValue>&quot;Send Email&quot;</defaultValue>
        <description>This field defines the button label for the contact me functionality.</description>
        <inlineHelpText>This field defines the button label for the contact me functionality.</inlineHelpText>
        <label>Contact Me Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Contact_Me_Email_Template__c</fullName>
        <description>This field contains the email template to be used for all email&apos;s sent using the contact me functionality</description>
        <inlineHelpText>This field contains the email template to be used for all email&apos;s sent using the contact me functionality</inlineHelpText>
        <label>Contact Me Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Contact_Me_From_Field__c</fullName>
        <description>This field contains the sender&apos;s email address field.</description>
        <inlineHelpText>This field contains the sender&apos;s email address field.</inlineHelpText>
        <label>Contact Me From: Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Contact_Me_From_Org_Wide_Email_Address__c</fullName>
        <description>This field contains the org-wide email address to be used as the sender&apos;s email address for all emails.</description>
        <inlineHelpText>This field contains the org-wide email address to be used as the sender&apos;s email address for all emails.</inlineHelpText>
        <label>Contact Me From: Org-Wide Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Contact_Me_To_Field__c</fullName>
        <description>This field contains the recipient&apos;s email address field.</description>
        <inlineHelpText>This field contains the recipient&apos;s email address field.</inlineHelpText>
        <label>Contact Me To: Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Custom_CSS__c</fullName>
        <description>Custom CSS is inserted before the closing html head (&amp;quot;&amp;lt;/head&amp;gt;&amp;quot;) tag into pages using this Theme.</description>
        <inlineHelpText>Custom CSS is inserted before the closing html head (&amp;quot;&amp;lt;/head&amp;gt;&amp;quot;) tag into pages using this Theme.</inlineHelpText>
        <label>Custom CSS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Custom_HTML_Config__c</fullName>
        <description>** SYSTEM ** (LABEL = SYSTEM, API NAME = DRCTS__Custom_HTML_Config__c)</description>
        <inlineHelpText>** SYSTEM ** (LABEL = SYSTEM, API NAME = DRCTS__Custom_HTML_Config__c)</inlineHelpText>
        <label>System</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Default_Sort_Field_Order__c</fullName>
        <defaultValue>&apos;ASC&apos;</defaultValue>
        <description>Used to identify whether is ASC or DESC order for the default sort field. DEFAULTS ASC</description>
        <inlineHelpText>Used to identify whether is ASC or DESC order for the default sort field. DEFAULTS ASC</inlineHelpText>
        <label>Default Sort Field Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Default_Sort_Field__c</fullName>
        <description>Used to sort records based on this field whenever someone lands on this directory</description>
        <inlineHelpText>Used to sort records based on this field whenever someone lands on this directory</inlineHelpText>
        <label>Default Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Default_View__c</fullName>
        <description>Defines the default view of the directory search results.</description>
        <inlineHelpText>Defines the default view of the directory search results.</inlineHelpText>
        <label>Default View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table</fullName>
                </value>
                <value>
                    <fullName>Enhanced List</fullName>
                </value>
                <value>
                    <fullName>Geo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRCTS__Description__c</fullName>
        <description>Describes the directory.  This is an internal field and does not display in front end.</description>
        <inlineHelpText>Describes the directory.  This is an internal field and does not display in front end.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Action_Button_Field__c</fullName>
        <description>This field contains the api name of the field used for the action button on Detail view</description>
        <inlineHelpText>This field contains the api name of the field used for the action button on Detail view</inlineHelpText>
        <label>Action Button Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Action_Button_Label__c</fullName>
        <description>This field defines what is displayed for the button label on Detail view.</description>
        <inlineHelpText>This field defines what is displayed for the button label on Detail view.</inlineHelpText>
        <label>Action Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Enable_Action_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By selecting this field you will enable an action button on the record&apos;s row in Detail View.</description>
        <inlineHelpText>By selecting this field you will enable an action button on the record&apos;s row in Detail List View.</inlineHelpText>
        <label>Enable Action Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Enable_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the each result will display an image in the detail view.</description>
        <label>Enable Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Image_field__c</fullName>
        <description>This field contains the api name of the image field to be displayed in the detail view.</description>
        <inlineHelpText>This field contains the api name of the image field to be displayed in the detail view.</inlineHelpText>
        <label>Image field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Latitude__c</fullName>
        <description>Corresponding Latitude field from the primary object</description>
        <inlineHelpText>Corresponding Latitude field from the primary object</inlineHelpText>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Longitude__c</fullName>
        <description>Corresponding Latitude field from the primary object</description>
        <inlineHelpText>Corresponding Latitude field from the primary object</inlineHelpText>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Placeholder_Image__c</fullName>
        <description>The URL of the image to be used when the result has no value in the image field.</description>
        <inlineHelpText>The URL of the image to be used when the result has no value in the image field.</inlineHelpText>
        <label>Placeholder Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Detail_Subtitle_Field__c</fullName>
        <description>The field value appears on the detail view underneath name.</description>
        <inlineHelpText>The field value appears on the detail view underneath name.</inlineHelpText>
        <label>Detail Subtitle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Directory_Style__c</fullName>
        <description>Generated Styles for Directories.</description>
        <inlineHelpText>Generated Styles for Directories.</inlineHelpText>
        <label>System</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Disable_Detail_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this will enable the on-click capability on all the views and will be redirected to detail page ** Defaults checked **</description>
        <inlineHelpText>Checking this will enable the on-click capability on all the views and will be redirected to detail page ** Defaults checked **</inlineHelpText>
        <label>Enable Detail View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Disable_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the filter functionality</description>
        <inlineHelpText>Enables the filter functionality</inlineHelpText>
        <label>Enable Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Disable_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the search functionality</description>
        <inlineHelpText>Enables the search functionality</inlineHelpText>
        <label>Enable Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Disable_Sort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the sort functionality</description>
        <inlineHelpText>Enables the sort functionality</inlineHelpText>
        <label>Enable Sort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Display_Name__c</fullName>
        <description>This field will display at the title of the directory across the banner.</description>
        <inlineHelpText>This field will display at the title of the directory across the banner.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the directory will only be accessible by authenticated individuals that meet the criteria.</description>
        <inlineHelpText>When checked the directory will only be accessible by authenticated individuals that meet the criteria.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Contact_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field enables authenticated users to direct email the search result.</description>
        <inlineHelpText>Checking this field enables authenticated users to direct email the search result.</inlineHelpText>
        <label>Enable Contact Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Contact_Preferences__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Enabled, this will have the ability for the user to show/hide profile fields when they are Authenticated.</description>
        <inlineHelpText>When Enabled, this will have the ability for the user to show/hide profile fields when they are Authenticated.</inlineHelpText>
        <label>Enable Contact Preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Detail_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a map will display on the detail page with the location of the selected record.</description>
        <inlineHelpText>When checked, a map will display on the detail page with the location of the selected record.</inlineHelpText>
        <label>Enable Detail Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Enhanced_List_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the directory will have an option to view the results in the enhanced list format.</description>
        <inlineHelpText>When checked the directory will have an option to view the results in the enhanced list format.</inlineHelpText>
        <label>Enable Enhanced List Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Geo_Location_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the directory will have an option to view the results with a map.</description>
        <inlineHelpText>When checked the directory will have an option to view the results with a map.</inlineHelpText>
        <label>Enable Geo-Location Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_List_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field will display the ability to print lists from the search view.</description>
        <inlineHelpText>Checking this field will display the ability to print lists from the search view.</inlineHelpText>
        <label>Enable List Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Listing_Profile_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the user to edit their own listing.</description>
        <inlineHelpText>Enables the user to edit their own listing.</inlineHelpText>
        <label>Enable Listing Profile Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Table_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the directory will have an option to view the results in a tabular format.</description>
        <inlineHelpText>When checked the directory will have an option to view the results in a tabular format.</inlineHelpText>
        <label>Enable Table Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Tile_Flip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, tile will now flip on hover in the frontend.</description>
        <inlineHelpText>When checked, tile will now flip on hover in the frontend.</inlineHelpText>
        <label>Enable Tile Flip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enable_Tile_List_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this will enable the tile list display.</description>
        <inlineHelpText>When checked, this will enable the tile list display.</inlineHelpText>
        <label>Enable Tile List Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Action_Button_Field__c</fullName>
        <description>This field contains the field&apos;s api name that contains the action URL on Enhanced List view.</description>
        <inlineHelpText>This field contains the field&apos;s api name that contains the action URL on Enhanced List view.</inlineHelpText>
        <label>Action Button Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Action_Button_Label__c</fullName>
        <description>This field contains the label value to be presented for the action button.</description>
        <inlineHelpText>This field contains the label value to be presented for the action button.</inlineHelpText>
        <label>Action Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Display_Results__c</fullName>
        <description>The value entered in this field is the number of results returned for each page on the Enhanced List view</description>
        <inlineHelpText>The value entered in this field is the number of results returned for each page on the Enhanced List view</inlineHelpText>
        <label>Display Results</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Enable_Action_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By selecting this field you will enable an action button on the record&apos;s row in Enhanced List View.</description>
        <inlineHelpText>By selecting this field you will enable an action button on the record&apos;s row in Enhanced List View.</inlineHelpText>
        <label>Enable Action Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Enable_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the each result will display an image in the enhanced list view.</description>
        <inlineHelpText>When checked the each result will display an image in the enhanced list view.</inlineHelpText>
        <label>Enable Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Image_field__c</fullName>
        <description>This field contains the api name of the image field to be displayed in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the image field to be displayed in the enhanced list view.</inlineHelpText>
        <label>Image field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Field_1_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 3 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Field_1__c</fullName>
        <description>This field contains the api name of the field used for the Field 1 position in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the field used for the Field 1 position in the enhanced list view.</inlineHelpText>
        <label>Position 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Field_2_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 4 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Field_2__c</fullName>
        <description>This field contains the api name of the field used for the Field 2 position in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the field used for the Field 2 position in the enhanced list view.</inlineHelpText>
        <label>Position 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Name_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 1 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Name__c</fullName>
        <description>This field contains the api name of the fields used for the name position in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the fields used for the name position in the enhanced list view.</inlineHelpText>
        <label>Position 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Subtitle_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 2 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Left_Column_Subtitle__c</fullName>
        <description>This field contains the api name of the fields used for the title position in the enhanced list view.</description>
        <inlineHelpText>This field contains the api name of the fields used for the title position in the enhanced list view.</inlineHelpText>
        <label>Position 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Enhanced_List_Placeholder_Image__c</fullName>
        <description>The URL of the image to be used when the result has no value in the image field.</description>
        <inlineHelpText>The URL of the image to be used when the result has no value in the image field.</inlineHelpText>
        <label>Placeholder Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Filter_Condition__c</fullName>
        <description>Defines the filter condition used to filter the full list of possible results in directory.</description>
        <inlineHelpText>Defines the filter condition used to filter the full list of possible results in directory.</inlineHelpText>
        <label>Filter Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Filter_Criteria__c</fullName>
        <description>Defines the criteria used to filter the full list of possible results in the directory.</description>
        <inlineHelpText>Defines the criteria used to filter the full list of possible results in the directory.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Filter_Fields__c</fullName>
        <description>This field holds the values for the fields that are used as filters in the directory.</description>
        <inlineHelpText>This field holds the values for the fields that are used as filters in the directory.</inlineHelpText>
        <label>Filter Fields</label>
        <length>80000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Action_Button_Field__c</fullName>
        <description>This field contains the api name of the field used for the action button on Geo view</description>
        <inlineHelpText>This field contains the api name of the field used for the action button on Geo view</inlineHelpText>
        <label>Action Button Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Action_Button_Label__c</fullName>
        <description>This field defines what is displayed for the button label on Geo view.</description>
        <inlineHelpText>This field defines what is displayed for the button label on Geo view.</inlineHelpText>
        <label>Action Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Display_Results__c</fullName>
        <description>The value entered in this field is the number of results returned for each page on the Geo view</description>
        <inlineHelpText>The value entered in this field is the number of results returned for each page on the Geo view</inlineHelpText>
        <label>Display Results</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Enable_Action_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By selecting this field you will enable an action button on the record&apos;s row in Geo View</description>
        <inlineHelpText>By selecting this field you will enable an action button on the record&apos;s row in Geo View</inlineHelpText>
        <label>Enable Action Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Enable_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the each result will display an image in the geo-location view.</description>
        <inlineHelpText>When checked the each result will display an image in the geo-location view.</inlineHelpText>
        <label>Enable Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Image_field__c</fullName>
        <description>This field contains the api name of the image field to be displayed in the Geo view.</description>
        <inlineHelpText>This field contains the api name of the image field to be displayed in the Geo view.</inlineHelpText>
        <label>Image field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Latitude__c</fullName>
        <description>Corresponding Latitude field from the primary object</description>
        <inlineHelpText>Corresponding Latitude field from the primary object</inlineHelpText>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Field_1_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 3 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Field_1__c</fullName>
        <description>This field contains the api name of the field used for the left column position 1 in the geo-location view.</description>
        <inlineHelpText>This field contains the api name of the field used for the left column position 1 in the geo-location view.</inlineHelpText>
        <label>Position 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Field_2_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 4 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Field_2__c</fullName>
        <description>This field contains the api name of the field used for the left column position 2 in the geo-location view.</description>
        <inlineHelpText>This field contains the api name of the field used for the left column position 2 in the geo-location view.</inlineHelpText>
        <label>Position 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Name_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 1 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Name__c</fullName>
        <description>This field contains the api name of the field used for the name position in the geo-location view.</description>
        <inlineHelpText>This field contains the api name of the field used for the name position in the geo-location view.</inlineHelpText>
        <label>Position 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Subtitle_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field displays the field label to users in the directory.</description>
        <inlineHelpText>Checking this field displays the field label to users in the directory.</inlineHelpText>
        <label>Position 2 Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Left_Column_Subtitle__c</fullName>
        <description>This field contains the api name of the field used for the title position in the geo-location view.</description>
        <inlineHelpText>This field contains the api name of the field used for the title position in the geo-location view.</inlineHelpText>
        <label>Position 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Longitude__c</fullName>
        <description>Corresponding Longitude field for the primary object</description>
        <inlineHelpText>Corresponding Longitude field for the primary object</inlineHelpText>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Geo_Placeholder_Image__c</fullName>
        <description>The URL of the image to be used when the result has no value in the image field.</description>
        <inlineHelpText>The URL of the image to be used when the result has no value in the image field.</inlineHelpText>
        <label>Placeholder Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DRCTS__Heading_Color__c</fullName>
        <description>Color of all heading text.</description>
        <inlineHelpText>Color of all heading text.</inlineHelpText>
        <label>Heading Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Hero_Text_Color__c</fullName>
        <description>Color used for the directory banner text.</description>
        <inlineHelpText>Color used for the directory banner text.</inlineHelpText>
        <label>Search Bar Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the Parent Directories. When checked, this will be considered for Primary object</description>
        <inlineHelpText>To identify the Parent Directories. When checked, this will be considered for Primary object</inlineHelpText>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRCTS__Link_Color__c</fullName>
        <description>Color of all text links.</description>
        <inlineHelpText>Color of all text links.</inlineHelpText>
        <label>Link Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRCTS__Link_Highlight_Color__c</fullName>
        <description>Highlight color of all text links.</description>
        <inlineHelpText>Highlight of all text links.</inlineHelpText>
        <label>Link Highlight Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>